# Ant-Colony-ROCm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  README.md  acopar.hpp  acopar3otim.c  acopar3otim.cpp  ant_is.py  ant_is_gpu.py  main.cpp  requirements.txt  run.sh  run_cuda.sh  run_rocm.sh  small.csv
database/: body_performance_teste_normal.csv  body_performance_treino_normal.csv  brain_stroke_teste_normal.csv  brain_stroke_treino_normal.csv  depressao_MissForest_teste_normal.csv  depressao_MissForest_treino_normal.csv  fetal_health_teste_normal.csv  fetal_health_treino_normal.csv  haberman_teste_normal.csv  haberman_treino_normal.csv  ifood_teste_normal.csv  ifood_treino_normal.csv  mushrooms_teste_normal.csv  mushrooms_treino_normal.csv  optdigits_teste_normal.csv  optdigits_treino_normal.csv  presos_teste_normal.csv  tic_tac_toe_teste_normal.csv  tic_tac_toe_treino_normal.csv  yeast_teste_normal.csv  yeast_treino_normal.csv
examples/: acopar3otim.c  ant_is.py  rocrand.cpp  run_acopar3otim.txt
include/: acopar.hpp  hip_error.hpp  matrix.hpp
src/: acopar.cpp  create_csv.cpp  main.cpp  matrix.cpp  parse_csv.cpp  run_colony.cpp
